--- a/frontend/src/app/pages/home/home.scss
+++ b/frontend/src/app/pages/home/home.scss
@@ -1,7 +1,7 @@
 .button-container {
     display: flex;
     flex-direction: row;
-    margin: 0 200px;
+    margin: 0 12.5rem;
     gap: 75px;
     /* Расстояние между кнопками */
     justify-content: center;
