--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -1,7 +1,7 @@
 @if (!loginPage) {
 <header class="header" tuiNavigationHeader>
     <span tuiNavigationLogo [ngClass]="{'center-text': loginPage}">
-        <span>Интерактивная карта офисов</span>
+        <span>{{title}}</span>
     </span>
     <hr />
     <a href="/login" class="admin-button">
