--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -3,7 +3,14 @@
     <span tuiNavigationLogo [ngClass]="{'center-text': loginPage}">
         <span>{{title}}</span>
     </span>
-    <hr />
+    @if (isSearch){
+        <div class="search-container">
+            <app-search class="search"/>
+        </div>
+    }
+    @else {
+        <hr />
+    }
     <a href="/login" class="admin-button">
         @if (user !== '') {
         <tui-icon icon="./media/account.svg" />
