Добавлена страница регистрации

--- a/frontend/src/app/pages/registration/registration.scss
+++ b/frontend/src/app/pages/registration/registration.scss
@@ -36,7 +36,7 @@ form {
     position: absolute;
     width: 20rem;
     padding: 6.875rem 3.75rem;
-    background: rgba(53, 53, 53, 0.68);
+    background: rgba(116, 53, 53, 0.68);
     border-radius: 6.1875rem;
     overflow: hidden;
     backdrop-filter: blur(8px);
@@ -44,7 +44,7 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 70px;
+    gap: 3.125rem;
     max-width: 30rem;
     width: 70%;
     max-height: 40rem;
@@ -69,40 +69,6 @@ form {
     word-wrap: break-word;
 }
 
-/*
-// input {
-//     display: flex;
-//     width: 20.125rem;
-//     padding: 1.5625rem 1.9375rem;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     gap: 0.75938rem;
-//     color: #000;
-//     font-family: "RockStar-sb";
-//     font-size: 1rem;
-//     font-style: normal;
-//     font-weight: 400;
-//     line-height: normal;
-//     border-radius: 8rem;
-//     border: none;
-// }
-
-// .custom-input {
-//     --tui-input-font-size: 1rem;
-//     --tui-input-padding: 0.5rem;
-//     --tui-input-border-radius: 0.5rem;
-//     --tui-input-background: #f0f0f0;
-//     --tui-input-color: #333;
-//     --tui-input-placeholder-color: #999;
-//     --tui-input-border-color: #ccc;
-//     --tui-input-focus-border-color: #007bff;
-// }
-
-// input::placeholder {
-//     color: black;
-// }
-*/
 .button {
     border: none;
     width: 12.125rem;
