--- a/frontend/src/app/components/searchBar/search.scss
+++ b/frontend/src/app/components/searchBar/search.scss
@@ -6,9 +6,9 @@
 
 .search-bar input {
   width: 46rem;
-  height: 100%;
+  height: 4rem;
   border-radius: var(--tui-radius-m);
-  font-family: 'RockStar-eb';
+  font-family: 'RockStar-sb';
   padding: var(--tui-padding-l) 2rem; /* Добавляем отступ справа для иконки */
   padding-left: 3.5rem; /* Дополнительный отступ слева для текста */
   color: black;
