--- a/frontend/src/app/components/searchBar/search.scss
+++ b/frontend/src/app/components/searchBar/search.scss
@@ -9,21 +9,23 @@
   height: 4rem;
   border-radius: var(--tui-radius-m);
   font-family: 'RockStar-sb';
+  font-size: 14pt;
   padding: var(--tui-padding-l) 2rem; /* Добавляем отступ справа для иконки */
-  padding-left: 3.5rem; /* Дополнительный отступ слева для текста */
+  padding-left: 4rem; /* Дополнительный отступ слева для текста */
   color: black;
   background-color: white;
   box-sizing: border-box; /* Учитываем отступы в ширине */
   outline: none;
+  border-color: transparent;
 }
 
 .search-bar .search-icon {
   position: absolute; /* Позиционируем иконку */
-  left: 0.75rem; /* Отступ от левого края */
+  left: 1rem; /* Отступ от левого края */
   top: 50%; /* Центрируем по вертикали */
   transform: translateY(-50%); /* Центрируем по вертикали */
-  width: 1.5rem; /* Ширина иконки */
-  height: 1.5rem; /* Высота иконки */
+  width: 2rem; /* Ширина иконки */
+  height: 2rem; /* Высота иконки */
   fill: black; /* Цвет иконки */
   pointer-events: none; /* Игнорируем события мыши для иконки */
 }
