--- a/frontend/src/app/pages/offices/office/office.scss
+++ b/frontend/src/app/pages/offices/office/office.scss
@@ -7,13 +7,10 @@ svg {
 .container {
   display: flex;
   flex-direction: row;
-  margin: 5rem 12.5rem;
+  margin: 5rem 5rem;
   gap: 75px;
-  /* Расстояние между кнопками */
   justify-content: center;
-  /* Выравнивание по горизонтали */
   align-items: flex-start;
-  /* Выравнивание по вертикали */
   justify-content: flex-start;
   flex-wrap: wrap;
 }
@@ -24,6 +21,18 @@ svg {
   flex-direction: column;
   align-items: center;
   gap: 2.5rem;
+  background: white;
+  border-radius: 1.875rem;
+  width: 15rem;
+}
+
+.office-image {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20rem;
+  padding-left: 20rem;
+  padding-right: 20rem;
 }
 
 .office-report {
@@ -32,4 +41,12 @@ svg {
   flex-direction: column;
   align-items: center;
   gap: 2.9375rem;
+  background: white;
+  border-radius: 1.875rem;
+  width: 15rem;
+}
+
+.info {
+  font-family: 'RockStar-sb';
+  text-align: left;
 }
