Сделаны правки страницы офиса

--- a/frontend/src/app/pages/offices/offices.component.html
+++ b/frontend/src/app/pages/offices/offices.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     @for (office of data; track $index) {
         <card-office
-        [title]="office.OfficeName"
-        [address]="office.Address"
-        [image]="office.Image"
+        [title]="office.officeName"
+        [address]="office.address"
+        [image]="office.image"
         ></card-office>
     }
 </div>
