--- a/frontend/src/app/pages/offices/office/office.component.html
+++ b/frontend/src/app/pages/offices/office/office.component.html
@@ -1,18 +1,21 @@
 <div class="container">
   <div class="office-info">
-      <h1>Информация</h1>
+      <h1 class="h1-name">Информация</h1>
+      <hr class="office-info-line">
       <div class="info">
         Главный офис компании
       </div>
+      <hr class="office-info-line">
       <div class="info">
-        Адрес: Улица Пушкина дом Колотушкина
+        Адрес:Улица Пушкина дом Колотушкина
       </div>
+      <hr class="office-info-line">
       <div class="info">
-        <div class="info">Кабинеты: 5 </div> 
-        <div class="info">Рабочие места: 25</div>
-        <div class="info">Кол-во сотрудников: 15</div> 
-        <div class="info">Свободных мест: 10(-2)</div> 
-        <div class="info">Забронированные места: 2</div> 
+        <div class="info-text">Кабинеты: <span class="span-number">5</span></div>
+        <div class="info-text">Рабочие места: <span class="span-number">25</span></div>
+        <div class="info-text">Кол-во сотрудников: <span class="span-number">15</span></div>
+        <div class="info-text">Свободных мест: <span class="span-number">10(-2)</span></div>
+        <div class="info-text">Забронированные места: <span class="span-number">2</span></div>
       </div>
   </div>
   <div class="office-image">
@@ -47,8 +50,5 @@
       </filter>
       </defs>
       </svg>      
-  </div>
-  <div class="office-report">
-
   </div>
 </div>
