--- a/frontend/src/app/pages/offices/office/office.scss
+++ b/frontend/src/app/pages/offices/office/office.scss
@@ -7,7 +7,6 @@ svg {
 .container {
   display: flex;
   flex-direction: row;
-  margin: 5rem 5rem;
   gap: 75px;
   justify-content: center;
   align-items: flex-start;
@@ -17,36 +16,53 @@ svg {
 
 .office-info {
   display: inline-flex;
-  padding: 2.3125rem 2rem 14.1875rem 2rem;
+  padding: 2.3125rem 2rem 100% 2rem;
   flex-direction: column;
-  align-items: center;
-  gap: 2.5rem;
+  gap: 1rem;
   background: white;
-  border-radius: 1.875rem;
-  width: 15rem;
+  width: 18rem;
 }
 
 .office-image {
-  display: inline-flex;
+  margin: 5rem 0rem;
+  display: flex;
   flex-direction: column;
   align-items: center;
   width: 20rem;
-  padding-left: 20rem;
-  padding-right: 20rem;
-}
-
-.office-report {
-  display: inline-flex;
-  padding: 2.3125rem 2rem 14.1875rem 2rem;
-  flex-direction: column;
-  align-items: center;
-  gap: 2.9375rem;
-  background: white;
-  border-radius: 1.875rem;
-  width: 15rem;
+  padding-left: 19rem;
+  padding-right: 19rem;
 }
 
 .info {
-  font-family: 'RockStar-sb';
+  font-family: 'RockStar-r';
   text-align: left;
+  font-size: 12pt;
+  color: rgba(81, 81, 81, 1);
+  .info-text {
+    display: flex;
+    gap: 0.5rem; /* Добавьте отступ между текстом и цифрами, если необходимо */
+  }
+  .span-number {
+    color: black;
+  }
+  .span-rockstar-eb {
+    font-family: 'RockStar-eb';
+    font-size: 16pt;
+  }
+  
+}
+
+.office-info-line {
+  width: 10rem;
+  color: rgba(81, 81, 81, 1);
+  height: 0.0005rem;
+}
+
+.h1-name {
+  color: rgba(81, 81, 81, 1);
+  display: inline-flex;
+  gap: 2rem;
+  font-size: 22pt;
+  font-family: 'RockStar-sb';
+  justify-content: center;
 }
