Добавлена навигационное меню в Header

--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -20,5 +20,25 @@
         <p>Войти</p>
         }
     </a>
-</header>
+
+</header> 
+   <div class="office-navigation">
+        <a href="/" class="navigation-text">
+            <p>На Главную</p>
+        </a>
+        <a (click)="goBack()" class="navigation-text">
+            <p>Назад</p>
+        </a>
+        <hr class="text-separator">
+        <a href="/" class="navigation-text">
+            <p>Поиск по офису</p>
+        </a>
+        <a href="/" class="navigation-text">
+            <p>Фильтр</p>
+        </a>
+        <hr class="text-separator">
+        <a href="/" class="navigation-text">
+            <p>Ещё...</p>
+        </a>
+    </div>
 }
