--- a/frontend/src/app/pages/offices/office/office.scss
+++ b/frontend/src/app/pages/offices/office/office.scss
@@ -29,7 +29,8 @@ svg {
   flex-direction: column;
   align-items: center;
   width: 20rem;
-  padding-left: 25rem;
+  padding-left: 23rem;
+  padding-top: 2rem;
 }
 
 .info {
