Добавлена функциональность в svg

--- a/frontend/src/app/pages/offices/office/office.scss
+++ b/frontend/src/app/pages/offices/office/office.scss
@@ -66,3 +66,11 @@ svg {
   font-family: 'RockStar-sb';
   justify-content: center;
 }
+
+.clickable {
+  transition: fill 0.3s ease;
+}
+
+.clickable:hover {
+  fill: lightcoral;
+}
