--- a/frontend/src/app/components/searchBar/search.scss
+++ b/frontend/src/app/components/searchBar/search.scss
@@ -1,31 +1,58 @@
-@import "../../styles/font.css";
+// @import "../../styles/font.css";
 
 .search-bar {
-  position: relative; /* Для позиционирования дочерних элементов */
+  display: flex;
+  align-items: center;
+  justify-content: right  ;
 }
 
-.search-bar input {
-  width: 46rem;
-  height: 4rem;
+.search-icon-container {
+  background-color: white; /* Белый фон */
+  border-radius: 0.51675rem;
+  padding: 8px; /* Отступ вокруг иконки */
+  cursor: pointer; /* Указатель при наведении на иконку */
+  display: inline-flex; /* Позволяет выровнять содержимое по центру */
+  align-items: center; /* Центрирование содержимого по вертикали */
+  justify-content: right; /* Центрирование содержимого по горизонтали */
+}
+
+.search-icon {
+  display: flex;
+  width: 2.5rem;
+  height: 2.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+input[type="text"] {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  display: inline-block; /* Убедитесь, что поле ввода отображается как блочный элемент */
+  width: 13.625rem;
+  height: 2.5rem;
   border-radius: var(--tui-radius-m);
-  font-family: 'RockStar-sb';
-  font-size: 14pt;
-  padding: var(--tui-padding-l) 2rem; /* Добавляем отступ справа для иконки */
-  padding-left: 4rem; /* Дополнительный отступ слева для текста */
+  font-family: "MyriadPro-r";
+  font-size: 18pt;
   color: black;
   background-color: white;
   box-sizing: border-box; /* Учитываем отступы в ширине */
   outline: none;
   border-color: transparent;
+  justify-content: right;
 }
 
-.search-bar .search-icon {
-  position: absolute; /* Позиционируем иконку */
-  left: 1rem; /* Отступ от левого края */
-  top: 50%; /* Центрируем по вертикали */
-  transform: translateY(-50%); /* Центрируем по вертикали */
-  width: 2rem; /* Ширина иконки */
-  height: 2rem; /* Высота иконки */
-  fill: black; /* Цвет иконки */
-  pointer-events: none; /* Игнорируем события мыши для иконки */
-}
+// .search-bar {
+//   position: relative; /* Для позиционирования дочерних элементов */
+// }
+
+// .search-bar .search-icon {
+//   position: absolute; /* Позиционируем иконку */
+//   left: 1rem; /* Отступ от левого края */
+//   top: 50%; /* Центрируем по вертикали */
+//   transform: translateY(-50%); /* Центрируем по вертикали */
+//   width: 2rem; /* Ширина иконки */
+//   height: 2rem; /* Высота иконки */
+//   fill: black; /* Цвет иконки */
+//   pointer-events: none; /* Игнорируем события мыши для иконки */
+// }
