Fixed card container

--- a/frontend/src/app/pages/offices/offices.scss
+++ b/frontend/src/app/pages/offices/offices.scss
@@ -1,8 +1,9 @@
 .container {
     display: flex;
     flex-direction: row;
+    width: 100rem;
     margin: 5rem 12.5rem;
-    gap: 75px;
+    gap: 4.12rem;
     /* Расстояние между кнопками */
     justify-content: center;
     /* Выравнивание по горизонтали */
