Changed card component

--- a/frontend/src/app/components/card/card.component.html
+++ b/frontend/src/app/components/card/card.component.html
@@ -3,11 +3,17 @@
         <h2 tuiTitle>{{title}}</h2>
     </header>
 
-    <section>
-        <img src="{{image}}" alt="Офис">
+    <section class="card-container">
+        <div class="card-info address">{{address}}</div>
+        <hr>
+        <div class="card-info">Свободных мест: 30 / 100</div>
+        <div class="card-info">Плотность посадки: 75% / 100%</div>
     </section>
 
-    <footer>
-        {{address}}
+    <footer class="card-footer">
+        <img src="http://localhost:8080/{{image}}" alt="Офис">
+        <a href="/offices/office" iconEnd="@tui.chevron-right" appearance="outline" size="xl" tuiButton>
+            К офису
+        </a>
     </footer>
 </div>
