--- a/frontend/src/app/components/card/card.scss
+++ b/frontend/src/app/components/card/card.scss
@@ -1,42 +1,94 @@
 @import '../../styles/font.css';
 
-.card{
-    height: 28rem;
-    --tui-font-heading-5: bold 1.5rem / 1.75rem "RockStar-eb";
+[tuiCardLarge][data-space]:not([tuiCell], [tuiHeader], [tuiForm]) {
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-start;
 }
 
-[tuiCardLarge][data-space]:not([tuiCell],[tuiHeader],[tuiForm])>:last-child:not([tuiCell]) {
-    margin-top: 0;
-}
-
-.card,
-.card-header {
-    width: 17.25rem;
-    background-color: #217FB5;
-    color: white;
-    font-family: 'RockStar-sb';
+.card {
+    display: flex;
+    width: 21.875rem;
+    padding: 2rem 1.625rem;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 1.875rem;
+    background: #3379B8;
+    box-shadow: 4px 4px 8px 0px rgba(11, 45, 65, 0.21);
+    flex: 1;
+    --t-space: 1rem;
+    --tui-font-heading-5: bold 1.5rem / 1.75rem "MyriadPro-eb";
+    --tui-text-primary: white;
+    --tui-text-action: white;
+    --tui-border-normal:white;
 
     .card-header {
-        font-size: 2.5rem;
-        font-family: 'RockStar-eb';
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 0.625rem;
+
+        h2 {
+            font-family: "MyriadPro-eb";
+            color: white;
+            font-size: 2.5rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+        }
+    }
+
+    .card-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.8125rem;
+
+        hr {
+            display: flex;
+            flex-direction: column;
+            gap: 0.625rem;
+            width: 11.5rem;
+            height: 0.0625rem;
+            background: rgba(255, 255, 255, 0.30);
+            margin-left: 0;
+        }
+
+        .card-info {
+            font-family: "MyriadPro-r";
+            font-size: 1.125rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            align-self: stretch;
+        }
+    }
+
+    .card-footer {
+        display: flex;
+        flex-direction: column;
         width: 100%;
+
+        
+        img {
+            margin-bottom: 1rem;
+            height: 9.625rem;
+            align-self: stretch;
+            border-radius: 1.875rem;
+            background: lightgray 50% / cover no-repeat;
+
+            filter: blur(0px);
+        }
+        
+        button {
+            width:100%;
+        }
     }
 }
 
-
-section {
-    display: flex;
-    block-size: 3.125rem;
-    border-radius: 0.75rem;
-    justify-content: center;
-    align-items: flex-start;
-    color: var(--tui-text-secondary);
-    border: none;
-    height: 14.25rem;
-}
-
-img {
-    height: 14.25rem;
-    width: 100%;
-    border-radius: 1.875rem;
+[tuiCardLarge][data-space]:not([tuiCell], [tuiHeader], [tuiForm])>:last-child:not([tuiCell]) {
+    margin-top: 0;
 }
