Deleted fonts RS

--- a/frontend/src/app/components/card/card.scss
+++ b/frontend/src/app/components/card/card.scss
@@ -39,7 +39,7 @@
             font-size: 2.5rem;
             font-style: normal;
             font-weight: 400;
-            line-height: normal;
+            line-height:  2.6rem;
         }
     }
 
