--- a/frontend/src/app/pages/offices/offices.component.html
+++ b/frontend/src/app/pages/offices/offices.component.html
@@ -4,6 +4,7 @@
         [title]="office.officeName"
         [address]="office.address"
         [image]="office.image"
+        [id]="office.idOffice"
         ></card-office>
     }
 </div>
