--- a/frontend/src/app/components/card/card.component.html
+++ b/frontend/src/app/components/card/card.component.html
@@ -15,7 +15,7 @@
 
     <footer class="card-footer">
         <img src="http://localhost:8080/{{image}}" alt="Офис">
-        <a href="/offices/{{id}}" iconEnd="@tui.chevron-right" appearance="outline" size="xl" tuiButton>
+        <a (click)="goToOffice(id, title, address, 1, 1, 1)" iconEnd="@tui.chevron-right" appearance="outline" size="xl" tuiButton>
             К офису
         </a>
     </footer>
