отредактирован footer и добавлен pretier

--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
-    <div class="container">
-      <nav>
-        <a href="https://www.titan2.ru/">АО «КОНЦЕРН ТИТАН-2»</a>
-      </nav>
-    </div>
-  </footer>
+  <div class="container">
+    <nav>
+      <a href="https://www.titan2.ru/" class="link">АО «КОНЦЕРН ТИТАН-2»</a>
+    </nav>
+  </div>
+</footer>
