--- a/frontend/src/app/components/card/card.component.html
+++ b/frontend/src/app/components/card/card.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <footer class="card-footer">
-        <img src="http://localhost:8080/{{image}}" alt="Офис">
+        <img src="{{image}}" alt="Офис">
         <a (click)="goToOffice(id, title, address, 1, 1, 1)" iconEnd="@tui.chevron-right" appearance="outline" size="xl" tuiButton>
             К офису
         </a>
