--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -16,7 +16,7 @@
         </tui-input>
         <!-- <input type="text" placeholder="Логин"> -->
         <!-- <input type="password" placeholder="Пароль"> -->
-        <button size="m" tuiButton type="button" class="button">
+        <button size="m" tuiButton (click)="onSubmit()" type="button" class="button">
             <div class="button-text">Войти</div>
         </button>
     </form>
