--- a/frontend/src/app/components/card/card.component.html
+++ b/frontend/src/app/components/card/card.component.html
@@ -5,7 +5,7 @@
         </header>
     
         <section class="card-container">
-            <div class="card-info address">{{adr}}<br>
+            <div class="card-info address">{{address}}<br>
                 <span>{{city}}</span><!--{{address}} --></div>
             <hr>
             <div class="card-info">Свободных мест: 30 / 100</div>
@@ -15,7 +15,7 @@
 
     <footer class="card-footer">
         <img src="{{image}}" alt="Офис">
-        <a (click)="goToOffice(id, title, address, 1, 1, 1)" iconEnd="@tui.chevron-right" appearance="outline" size="xl" tuiButton>
+        <a (click)="goToOffice(id())" iconEnd="@tui.chevron-right" appearance="outline" size="xl" tuiButton>
             К офису
         </a>
     </footer>
