--- a/frontend/src/app/components/card/card.component.html
+++ b/frontend/src/app/components/card/card.component.html
@@ -1,12 +1,12 @@
 <div class="card" tuiAppearance="floating" tuiCardLarge>
-    <div>
+    <div class="scroll-card">
         <div class="card-header" tuiHeader>
             <h2 tuiTitle>{{title}}</h2>
         </div>
     
         <section class="card-container">
             <div class="card-info address">{{address}}<br>
-                <span>{{city}}</span><!--{{address}} --></div>
+                <span>{{city}}</span></div>
             <hr>
             <div class="card-info">Свободных мест: 30 / 100</div>
             <div class="card-info">Плотность посадки: 75% / 100%</div>
