--- a/frontend/src/app/pages/offices/offices.component.html
+++ b/frontend/src/app/pages/offices/offices.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     @for (office of data; track $index) {
         <card-office
+        [data]="office"
         [id]="office.idOffice"
         ></card-office>
     }
