--- a/frontend/src/app/components/card/card.component.html
+++ b/frontend/src/app/components/card/card.component.html
@@ -1,20 +1,23 @@
 <div class="card" tuiAppearance="floating" tuiCardLarge>
     <div class="scroll-card">
         <div class="card-header" tuiHeader>
-            <h2 tuiTitle>{{title}}</h2>
+            <h2 tuiTitle>{{data.officeName}}</h2>
         </div>
-    
+
         <section class="card-container">
-            <div class="card-info address">{{address}}<br>
-                <span>{{city}}</span></div>
+            <div class="card-info address">
+                {{data.address}}<br>
+                <span>{{data.address}}</span>
+            </div>
             <hr>
-            <div class="card-info">Свободных мест: 30 / 100</div>
-            <div class="card-info">Плотность посадки: 75% / 100%</div>
+            <div class="card-info">Свободных мест: {{data.totalWorkspace - data.occupiedWorkspaces}} /
+                {{data.totalWorkspace}}</div>
+            <div class="card-info">Плотность посадки: {{data.density}}</div>
         </section>
     </div>
 
     <div class="card-footer">
-        <img src="{{image}}" alt="Офис">
+        <img src="{{data.imageUrl}}" alt="Офис">
         <a (click)="goToOffice(id())" iconEnd="@tui.chevron-right" appearance="outline" size="xl" tuiButton>
             К офису
         </a>
