--- a/frontend/src/app/components/card/card.component.html
+++ b/frontend/src/app/components/card/card.component.html
@@ -6,13 +6,13 @@
 
         <section class="card-container">
             <div class="card-info address">
-                {{data.address}}<br>
+                {{data.city}}<br>
                 <span>{{data.address}}</span>
             </div>
             <hr>
             <div class="card-info">Свободных мест: {{data.totalWorkspace - data.occupiedWorkspaces}} /
                 {{data.totalWorkspace}}</div>
-            <div class="card-info">Плотность посадки: {{data.density}}</div>
+            <div class="card-info">Плотность посадки: {{data.density}} м²</div>
         </section>
     </div>
 
