--- a/frontend/src/app/pages/offices/office/office.component.html
+++ b/frontend/src/app/pages/offices/office/office.component.html
@@ -1,24 +1,29 @@
-<div class="container">
-  <div class="office-info">
-      <h1 class="h1-name">Информация</h1>
-      <hr class="office-info-line">
-      <div class="info">
-        {{dataOffice.officeName}}
-      </div>
-      <hr class="office-info-line">
-      <div class="info">
-        Адрес: {{dataOffice.address}}
-      </div>
-      <hr class="office-info-line">
-      <div class="info">
-        <div class="info-text">Кабинеты: <span class="span-number">{{dataOffice.countCab}}</span></div>
-        <div class="info-text">Рабочие места: <span class="span-number">{{dataOffice.countWorkspace}}</span></div>
-        <div class="info-text">Кол-во сотрудников: <span class="span-number">15</span></div>
-        <div class="info-text">Свободных мест: <span class="span-number">{{dataOffice.countAvaibleWorkspace}}</span></div>
-        <div class="info-text">Забронированные места: <span class="span-number">2</span></div>
-      </div>
+@if (isLoading) {
+  <app-loading/>
+} 
+@else {
+  <div class="container">
+    <div class="office-info">
+        <h1 class="h1-name">Информация</h1>
+        <hr class="office-info-line">
+        <div class="info">
+          {{dataOffice.officeName}}
+        </div>
+        <hr class="office-info-line">
+        <div class="info">
+          Адрес: {{dataOffice.address}}
+        </div>
+        <hr class="office-info-line">
+        <div class="info">
+          <div class="info-text">Кабинеты: <span class="span-number"></span></div>
+          <div class="info-text">Рабочие места: <span class="span-number"></span></div>
+          <div class="info-text">Кол-во сотрудников: <span class="span-number">15</span></div>
+          <div class="info-text">Свободных мест: <span class="span-number"></span></div>
+          <div class="info-text">Забронированные места: <span class="span-number">2</span></div>
+        </div>
+    </div>
+    <div class="office-image" >
+      <div [innerHTML]="svgContent"></div>
+    </div>
   </div>
-  <div class="office-image" >
-    <div [innerHTML]="svgContent"></div>
-  </div>
-</div>
+}
