--- a/frontend/src/app/pages/offices/offices.component.html
+++ b/frontend/src/app/pages/offices/offices.component.html
@@ -1,8 +1,13 @@
-<div class="container">
-    @for (office of data; track $index) {
-        <card-office
-        [data]="office"
-        [id]="office.idOffice"
-        ></card-office>
-    }
-</div>
+@if (isLoading) {
+<app-loading/>
+}
+@else {
+    <div class="container">
+        @for (office of data; track $index) {
+            <card-office
+            [data]="office"
+            [id]="office.idOffice"
+            ></card-office>
+        }
+    </div>
+}
