--- a/frontend/src/app/pages/offices/office/office.component.html
+++ b/frontend/src/app/pages/offices/office/office.component.html
@@ -1,38 +1,43 @@
 @if (isLoading) {
-<app-loading />
-}
-@else {
-<div class="container">
-  <div class="office-info">
-    <h1 class="h1-name">Информация</h1>
-    <hr class="office-info-line">
-    <div class="info">
-      {{dataOffice.officeName}}
-    </div>
-    <hr class="office-info-line">
-    <div class="info">
-      Адрес: {{dataOffice.address}}
-    </div>
-    <hr class="office-info-line">
-    <div class="info">
-      <!-- Здесь должна быть информация о Floor -->
-        <div class="info-text">Кабинеты: <span class="span-number">{{paginatedFloor.rooms.length}}</span></div>
-        <div class="info-text">Рабочие места: <span class="span-number">{{paginatedFloor.totalWorkspace}}</span></div>
-        <div class="info-text">Кол-во сотрудников: <span class="span-number">15</span></div>
-        <div class="info-text">Свободных мест: <span class="span-number">{{paginatedFloor.totalWorkspace}}</span></div>
+  <app-loading />
+  }
+  @else {
+  <div class="container">
+    <div class="office-info">
+      <h1 class="h1-name">Информация</h1>
+      <hr class="office-info-line">
+      <div class="info">
+        {{dataOffice.officeName}}
+      </div>
+      <hr class="office-info-line">
+      <div class="info">
+        Адрес: {{dataOffice.address}}
+      </div>
+      <hr class="office-info-line">
+      <div class="info">
+        <!-- Здесь должна быть информация о Floor -->
+        <div class="info-text">Кабинеты: <span
+            class="span-number">{{paginatedFloor.rooms.length}}</span></div>
+        <div class="info-text">Рабочие места: <span
+            class="span-number">{{paginatedFloor.totalWorkspace}}</span></div>
+        <div class="info-text">Кол-во сотрудников: <span
+            class="span-number">0<!--paginatedFloor.occupiedWorkspaces--></span></div>
+        <div class="info-text">Свободных мест: <span
+            class="span-number">{{paginatedFloor.totalWorkspace}}</span></div>
         <div class="info-text">Забронированные места: <span class="span-number">2</span></div>
-      <!-- Здесь конец информации -->
-      <div class="pagination">
-        <tui-pagination 
-        [index]="currentPage" 
-        [length]="totalFloors" 
-        (indexChange)="onPageChange($event)">
-        </tui-pagination>
+        <!-- Здесь конец информации -->
+        @if (totalFloors > 1) {
+        <div class="pagination">
+          <tui-pagination [index]="currentPage" [length]="totalFloors" (indexChange)="onPageChange($event)">
+          </tui-pagination>
+        </div>
+        }
       </div>
     </div>
+    <div class="office-image">
+      @if (paginatedFloor.scheme) {
+        <div [innerHTML]="paginatedFloor.scheme | safeHtml"></div>
+      }
+    </div>
   </div>
-  <div class="office-image">
-    <div [innerHTML]="svgContent"></div>
-  </div>
-</div>
-}
+  }
