--- a/frontend/src/app/components/floor-schema/floor-schema.component.html
+++ b/frontend/src/app/components/floor-schema/floor-schema.component.html
@@ -1,9 +1,7 @@
-
-<svg>
-    <g filter>
-        @for (room of floorInfo.rooms; track $index) 
-        {
-            <app-room-schema></app-room-schema>
-        }
+<svg width="1021" height="706" viewBox="0 0 1021 706" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <g filter="url(#filter0_d_299_152)">
+        <ng-container *ngFor="let room of floorInfo.rooms; let i = index">
+            <a id="{{room.idRoom}}" (click)='onRoomClick(room.idRoom)' [innerHTML]="rooms[i] | safeHtml"></a>
+        </ng-container>
     </g>
 </svg>
