Added button for reports

--- a/frontend/src/app/pages/offices/office/office.component.html
+++ b/frontend/src/app/pages/offices/office/office.component.html
@@ -32,6 +32,7 @@
         </tui-pagination>
       </div>
       }
+      <button tuiButton size="m" type="button">Создать отчет</button>
     </div>
   </div>
   <div class="office-image">
