--- a/frontend/src/app/pages/offices/office/office.scss
+++ b/frontend/src/app/pages/offices/office/office.scss
@@ -24,13 +24,12 @@ svg {
 }
 
 .office-image {
-  margin: 5rem 0rem;
+  margin: 3rem 0rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 20rem;
   padding-left: 23rem;
-  padding-top: 2rem;
 }
 
 .info {
@@ -38,10 +37,13 @@ svg {
   text-align: left;
   font-size: 16px;
   color: rgba(81, 81, 81, 1);
+
   &-text {
     display: flex;
-    gap: 0.5rem; /* Добавьте отступ между текстом и цифрами, если необходимо */
-    & > span {
+    gap: 0.5rem;
+
+    /* Добавьте отступ между текстом и цифрами, если необходимо */
+    &>span {
       color: black;
     }
   }
